Aspect ratio on image, remove react leftovers, remove gatsby leftovers, and fix scroll track on overflow.

--- a/src/styles/global.pcss
+++ b/src/styles/global.pcss
@@ -110,11 +110,6 @@ body::-webkit-scrollbar-thumb {
 	border: 3px solid var(--darkGrey);
 }
 
-.gatsby-image-wrapper img[src*='base64\\,'] {
-	image-rendering: -moz-crisp-edges;
-	image-rendering: pixelated;
-}
-
 ::selection {
 	background: var(--white);
 	color: var(--background);
